add preview bottom panel tab

--- a/cdap-ui/app/features/hydratorplusplus/bottompanel.less
+++ b/cdap-ui/app/features/hydratorplusplus/bottompanel.less
@@ -703,4 +703,8 @@ body.theme-cdap.state-hydratorplusplus {
     position: fixed;
     z-index: 1025;
   }
+
+  div.preview-tab {
+    padding: 0 10px 20px 10px;
+  }
 }
