ability to test 1 single transform

--- a/cdap-ui/app/features/hydratorplusplus/hydrator-modal.less
+++ b/cdap-ui/app/features/hydratorplusplus/hydrator-modal.less
@@ -83,4 +83,14 @@
       }
     }
   }
+
+  &.preview-data {
+    .json-editor { margin-bottom: 15px; }
+    .preview-button, .results {
+      margin-top: 15px;
+    }
+    .modal-body {
+      padding-bottom: 15px;
+    }
+  }
 }
