--- a/cdap-ui/app/features/hydratorplusplus/templates/partial/preview.html
+++ b/cdap-ui/app/features/hydratorplusplus/templates/partial/preview.html
@@ -27,20 +27,23 @@
         <div class="col-xs-6">
           <h4>Input Records</h4>
 
-          <table class="table" ng-if="PreviewController.node.previewData.inputRecord">
+          <table class="table" ng-if="PreviewController.node.previewData.input">
             <thead>
-              <th>Key</th>
-              <th>Value</th>
+              <th ng-repeat="field in PreviewController.inputSchema">
+                {{ field.name }}
+              </th>
             </thead>
             <tbody>
-              <tr ng-repeat="(key, value) in PreviewController.node.previewData.inputRecord">
-                <td>{{ key }}</td>
-                <td>{{ value }}</td>
+              <tr ng-repeat="input in PreviewController.node.previewData.input">
+                <td ng-repeat="field in PreviewController.inputSchema">
+                  {{ input.inputRecord[field.name] }}
+                </td>
+
               </tr>
             </tbody>
           </table>
 
-          <div class="no-records text-center" ng-if="!PreviewController.node.previewData.inputRecord">
+          <div class="no-records text-center" ng-if="!PreviewController.node.previewData.input">
             <p>No input records.</p>
           </div>
         </div>
@@ -49,20 +52,22 @@
         <div class="col-xs-6">
           <h4>Output Record</h4>
 
-          <table class="table" ng-if="PreviewController.node.previewData.outputRecord">
+          <table class="table" ng-if="PreviewController.node.previewData.output">
             <thead>
-              <th>Key</th>
-              <th>Value</th>
+              <th ng-repeat="field in PreviewController.outputSchema">
+                {{ field.name }}
+              </th>
             </thead>
             <tbody>
-              <tr ng-repeat="(key, value) in PreviewController.node.previewData.outputRecord">
-                <td>{{ key }}</td>
-                <td>{{ value }}</td>
+              <tr ng-repeat="output in PreviewController.node.previewData.output">
+                <td ng-repeat="field in PreviewController.outputSchema">
+                  {{ output.outputRecord[field.name] }}
+                </td>
               </tr>
             </tbody>
           </table>
 
-          <div class="no-records text-center" ng-if="!PreviewController.node.previewData.outputRecord">
+          <div class="no-records text-center" ng-if="!PreviewController.node.previewData.output">
             <p>No output records.</p>
           </div>
         </div>
