--- a/cdap-ui/app/features/hydratorplusplus/templates/partial/node-config-modal/node-config/plugin-edit-output-schema.html
+++ b/cdap-ui/app/features/hydratorplusplus/templates/partial/node-config-modal/node-config/plugin-edit-output-schema.html
@@ -60,27 +60,13 @@
       </div>
     </div>
     <div ng-if="isDisabled">
-      <!-- <my-schema-editor
+      <my-complex-schema-editor
         ng-model="HydratorPlusPlusNodeConfigCtrl.state.node.outputSchema"
-        ng-if="HydratorPlusPlusNodeConfigCtrl.state.node.outputSchema"
-        data-disabled="::HydratorPlusPlusNodeConfigCtrl.state.groupsConfig.outputSchema.implicitSchema || isDisabled"
-        plugin-properties="HydratorPlusPlusNodeConfigCtrl.state.node.plugin.properties"
-        config="::HydratorPlusPlusNodeConfigCtrl.state.groupsConfig.outputSchema.schemaProperties">
-      </my-schema-editor> -->
-      <my-complex-schema
-        ng-model="HydratorPlusPlusNodeConfigCtrl.state.node.outputSchema"
-        is-disabled="true">
-      </my-complex-schema>
+        is-disabled="true"
+        plugin-name="::HydratorPlusPlusNodeConfigCtrl.state.node.plugin.name">
+      </my-complex-schema-editor>
     </div>
     <div ng-if="!isDisabled">
-      <!-- <my-schema-editor
-        ng-model="HydratorPlusPlusNodeConfigCtrl.state.node.outputSchema"
-        data-disabled="HydratorPlusPlusNodeConfigCtrl.state.groupsConfig.outputSchema.implicitSchema"
-        plugin-properties="HydratorPlusPlusNodeConfigCtrl.state.node.plugin.properties"
-        config="::HydratorPlusPlusNodeConfigCtrl.state.groupsConfig.outputSchema.schemaProperties"
-        ng-if="::HydratorPlusPlusNodeConfigCtrl.state.node.plugin.name !== 'Stream'">
-      </my-schema-editor> -->
-
       <my-complex-schema-editor
         ng-model="HydratorPlusPlusNodeConfigCtrl.state.node.outputSchema"
         is-disabled="HydratorPlusPlusNodeConfigCtrl.state.groupsConfig.outputSchema.implicitSchema"
